cmake_minimum_required(VERSION 3.22)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(BUILD_SHARED_LIBS OFF)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)



#设置输出路径
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/Binary/Debug)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_Release ${CMAKE_CURRENT_SOURCE_DIR}/Binary/Release)

set(CMAKE_PDB_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/Binary/Debug)
set(CMAKE_PDB_OUTPUT_DIRECTORY_Release ${CMAKE_CURRENT_SOURCE_DIR}/Binary/Release)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/Binary/Debug)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_Release ${CMAKE_CURRENT_SOURCE_DIR}/Binary/Release)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/Binary/Debug)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_Release ${CMAKE_CURRENT_SOURCE_DIR}/Binary/Release)

set(OUTPUT_DIR_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/Binary/Debug)
set(OUTPUT_DIR_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/Binary/Release)

project(FireEngine)
set(PROJCET_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(PROJECT_THIRD_PARTY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty)
set(PROJECT_ASSET_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Resource)
add_subdirectory(Source)
add_subdirectory(ThirdParty)


if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    add_compile_options("/MP")
    set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT GameLaunch)
endif()